Adaptacion por plugin de python sin probar